Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-6293

Shell commands run by Impala can fail when using the Java debugger

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 2.11.0
    • Impala 3.2.0
    • Backend
    • None

    Description

      Impala has several parameters that specify shell commands for Impala to run:
      s3a_access_key_cmd
      s3a_secret_key_cmd
      ssl_private_key_password_cmd
      webserver_private_key_password_cmd

      When debugging the JVM inside the Impala process, it is useful to specify JAVA_TOOL_OPTIONS to run the Java debugger on a particular port. However, JAVA_TOOL_OPTIONS remains in the environment, so it is passed to these shell commands. If any of these shell commands run java, then that JVM will attempt to use the JAVA_TOOL_OPTIONS specified and thus try to bind to the same port. The Impala process JVM is already bound to that port, so this will fail. Several of these commands run at startup, so Impala will fail to startup with the Java debugger.

      Impala should be careful about the environment variables that get passed to these shell programs. In particular, JAVA_TOOL_OPTIONS should be scrubbed of any Java debugger configuration to avoid these port conflicts. It might be best to simply null out JAVA_TOOL_OPTIONS for these commands.

      Attachments

        Issue Links

          Activity

            People

              fredyw Fredy Wijaya
              joemcdonnell Joe McDonnell
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: